[package]
name = "nightserv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.1"
rand = "0.8.4"

tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3"

serde = {version="1.0.137", features=["derive"]}
serde_json = "1.0.81"

dotenv = "0.15.0"

anyhow = "1.0"
warp = "0.3.6"

[dependencies.serenity]
version="0.11.7"
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "cache",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
